--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-openid-connect": "^2.19.2",
+    "express-validator": "^7.2.1",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1"
   },
